# BatchRefiner

./: LICENSE  README.md  pyproject.toml
batchrefiner/: __init__.py  br.py  ilisi_score.py  pcr_score.py  r2_score.py
example/: example_pancreas.ipynb
