[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["batchrefiner"]

[project]
name = "BatchRefiner"
version = "1.0.0"
authors = [
  { name="Daniel Schaffer", email="dschaffe@mit.edu" },
]
description = "A general postprocessing tool to boost batch integration of scRNA-seq cell embeddings."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    "numpy>=1.20.0",
	"anndata>=0.7.2",
    "scanpy>=1.5",
    "scib==1.1.7",
    "pandas>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/schafferde/BatchRefiner"
Issues = "https://github.com/schafferde/BatchRefiner/issues"
